# run-in-subdirectory

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/run_in_subdirectory/: __init__.py  run_in_subdirectory.py
tests/: test_run_in_subdirectory.py
