[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "run-in-subdirectory"
version = "1.0.1"
description = "A command-line utility for running commands in subdirectories (e.g. in a monorepo) with a set of pre-commit hooks"
license = "MIT"
authors = ["Egor Makarenko <egormkn@yandex.ru>"]
readme = "README.md"
repository = "https://github.com/egormkn/run-in-subdirectory"
keywords = ["git", "hooks", "utilities", "pre-commit", "monorepo", "git-hooks", "pre-commit-hook", "pre-commit-hooks", "subdirectory"]
packages = [{include = "run_in_subdirectory", from = "src"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
ruff = "^0.9.7"

[tool.poetry.group.test.dependencies]
coverage = {extras = ["toml"], version = "7.6.12"}
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.poetry.scripts]
run-in-subdirectory = "run_in_subdirectory:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.coverage.run]
omit = ["__main__.py"]

[tool.coverage.report]
exclude_also = ["if __name__ == ['\"]__main__['\"]:"]
